docs/build_errors2.log
Consolidate compiler generated dependencies of target cuda_girth_core
[  4%] Building CUDA object CMakeFiles/cuda_girth_core.dir/src/kernel/bfs_level.cu.o
/cugrith/cuda-girth/src/kernel/bfs_level.cu(74): error: class "cooperative_groups::__v1::thread_block_tile<32U, cooperative_groups::__v1::thread_block>" has no member "reduce"
      int warp_best = warp.reduce(local_best, cg::less<int>());
                           ^

/cugrith/cuda-girth/src/kernel/bfs_level.cu(145): error: class "cooperative_groups::__v1::thread_block_tile<32U, cooperative_groups::__v1::thread_block>" has no member "reduce"
      int warp_best = warp.reduce(local_best, cg::less<int>());
                           ^

2 errors detected in the compilation of "/cugrith/cuda-girth/src/kernel/bfs_level.cu".
gmake[2]: *** [CMakeFiles/cuda_girth_core.dir/build.make:146: CMakeFiles/cuda_girth_core.dir/src/kernel/bfs_level.cu.o] Error 2
gmake[1]: *** [CMakeFiles/Makefile2:144: CMakeFiles/cuda_girth_core.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
